--- a/style.css
+++ b/style.css
@@ -120,3 +120,18 @@ html, body{
     
     transform: translate(100px);
 }
+.texts{
+    height: 100%;
+    overflow: hidden;
+}
+.texts h1{
+    transform: translateX(100px);
+}
+.cursor{
+    height: 20px;
+    width: 20px;
+    background-color: black;
+    position: absolute;
+    border-radius: 50%;
+    transition: all 0.1s linear;
+}
