--- a/style.css
+++ b/style.css
@@ -121,11 +121,11 @@ html, body{
     transform: translate(100px);
 }
 .texts{
-    height: 100%;
+    height: 10%;
     overflow: hidden;
 }
 .texts h1{
-    transform: translateX(100px);
+    z-index: 6;
 }
 .cursor{
     height: 20px;
@@ -134,4 +134,20 @@ html, body{
     position: absolute;
     border-radius: 50%;
     transition: all 0.1s linear;
+    z-index: 999;
+}
+.elem{
+    position: relative;
+}
+.elem img{
+    height: 250px;
+    width: 250px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid black;
+    position: absolute;
+    scale: 0;
+    opacity: 0;
+    transition: all 0.2s linear;
+
 }
