--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html, body{
     src: url(matter-light.woff2);
 }
 .container{
-    width: 100%;
+    /* width: 100%; */
     background-color: white;
     padding: 0 3vw;
 }
@@ -144,11 +144,20 @@ html, body{
     width: 250px;
     object-fit: cover;
     border-radius: 50%;
-    border: 2px solid black;
     position: absolute;
     scale: 0;
     opacity: 0;
     transition: all 0.2s linear;
     filter: grayscale(10);
 
+}
+.fist{
+    position: absolute;
+    left: 50%;
+    top: 100%;
+    transform: translate(-50%, -50%)
+};
+.page-2{
+    min-height: 100vh;
+    width: 100%;
 }
